增加UvaEntity类：无人机类。在界面补充新增无人机功能。

--- a/UVA/UVA.csproj
+++ b/UVA/UVA.csproj
@@ -61,6 +61,7 @@
     <Compile Include="SysSetting.Designer.cs">
       <DependentUpon>SysSetting.cs</DependentUpon>
     </Compile>
+    <Compile Include="UvaEntity.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
