实现文件缓存写入，但是存在内存和硬盘的读写速度差。

--- a/UVA/UVA.csproj
+++ b/UVA/UVA.csproj
@@ -93,6 +93,7 @@
     <Compile Include="test.cs" />
     <Compile Include="UvaEntity.cs" />
     <Compile Include="VideoSegment.cs" />
+    <Compile Include="VLCBase.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
