--- a/UVA/UVA.csproj
+++ b/UVA/UVA.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>SysSetting.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
