为来文君添加了几个没用的按钮，没错，是爸爸的爱

--- a/UVA/UVA.csproj
+++ b/UVA/UVA.csproj
@@ -99,6 +99,7 @@
       <DependentUpon>SysSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="test.cs" />
+    <Compile Include="linkInfoManager.cs" />
     <Compile Include="UvaEntity.cs" />
     <Compile Include="VideoSegment.cs" />
     <Compile Include="VLCBase.cs" />
