--- a/UVA/UVA.csproj
+++ b/UVA/UVA.csproj
@@ -90,6 +90,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Global.cs" />
+    <Compile Include="linkInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="linkInfo.Designer.cs">
+      <DependentUpon>linkInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysSetting.cs">
@@ -100,6 +106,7 @@
     </Compile>
     <Compile Include="test.cs" />
     <Compile Include="linkInfoManager.cs" />
+    <Compile Include="Tool.cs" />
     <Compile Include="UvaEntity.cs" />
     <Compile Include="VideoSegment.cs" />
     <Compile Include="VLCBase.cs" />
@@ -109,6 +116,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="linkInfo.resx">
+      <DependentUpon>linkInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -117,6 +127,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="SysSetting.resx">
       <DependentUpon>SysSetting.cs</DependentUpon>
@@ -184,6 +195,11 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\car.png" />
+    <Content Include="Resources\server.png" />
+    <Content Include="Resources\uva.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
